--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,111 @@
+@font-face {
+    font-family: "caveat";
+    src: url("./Caveat-Regular.ttf") format("truetype");
+    font-weight: 600;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "caveat", serif;
+
+}
+
+#content {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    color: white;
+}
+
+#content > h1 {
+    font-size: 8rem;
+    margin: 3rem;
+}
+
+.home {
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 30vw;
+    text-align: center;
+    align-items: center;
+    color: white;
+    text-wrap: wrap;
+    font-size: 3rem;
+    border: 0 solid transparent;
+    border-radius: 10px;
+}
+
+.selected-button {
+    background-image: linear-gradient(to right, hsl(31 42 48), hsl(31 42 18));
+
+    background-repeat: no-repeat;
+
+    background-position: center bottom;
+
+    background-size: 100% 4px;
+}
+
+header {
+    display: flex;
+    width: 100vw;
+    height: 10vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.3);
+}
+
+nav {
+    display: flex;
+    gap: 5rem;
+}
+
+button {
+    padding: 0.5rem;
+    background-color: transparent;
+    border: none;
+    color: white;
+    cursor: pointer;
+    font-size: 2rem;
+
+
+    /*this is to create the line that appears underneath, defining which way the color changes and what color*/
+    background-image: linear-gradient(to right, hsl(31 42 48), hsl(31 42 18));
+
+    /*if i didn't have this, the whole background would be the color instead of a single line*/
+    background-repeat: no-repeat;
+
+    /*this defines where the line will start growing from*/
+    background-position: center bottom;
+
+    /* the zero is to hide the line while no hover, 4px is to determine the thickness, width/height */
+    background-size: 0 4px;
+
+    /* this is to animate the size and color if they change */
+    transition: background-size 0.3s ease-in-out,
+    color 0.3s ease-in-out;
+
+}
+
+button:hover {
+    background-size: 100% 4px;
+    color: hsl(31 42 48);
+
+}
+
+button:active {
+    transform: scale(0.9);
+
+}
+
 body {
-    background-color: rebeccapurple;
+    background-image: url("./images/bread-background.jpg");
+    background-size: cover;
+    background-position: center 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+
 }
