--- a/src/styles.css
+++ b/src/styles.css
@@ -20,13 +20,19 @@
 }
 
 #content > h1 {
-    font-size: 8rem;
+    font-size: 6rem;
     margin: 3rem;
+    color: hsl(31 42 48);
+}
+
+.home > p {
+    font-size: 2rem;
+    margin-top: 2rem;
 }
 
 .home {
     background-color: rgba(0, 0, 0, 0.5);
-    width: 30vw;
+    width: 35vw;
     text-align: center;
     align-items: center;
     color: white;
@@ -34,6 +40,7 @@
     font-size: 3rem;
     border: 0 solid transparent;
     border-radius: 10px;
+
 }
 
 .selected-button {
@@ -54,6 +61,9 @@ header {
     justify-content: center;
     align-items: center;
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.3);
+    position: sticky;
+    top: 0;
+
 }
 
 nav {
