--- a/src/styles.css
+++ b/src/styles.css
@@ -16,23 +16,30 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    color: white;
 }
 
 #content > h1 {
-    font-size: 6rem;
-    margin: 3rem;
+    font-size: 7rem;
+    margin-top: 6rem;
+    margin-bottom: 2rem;
     color: hsl(31 42 48);
+    text-shadow: 0 4px 6px rgba(0, 0, 0, 1);
+
+}
+
+.home > h2 {
+    font-size: 5rem;
 }
 
 .home > p {
-    font-size: 2rem;
+    font-size: 3rem;
     margin-top: 2rem;
 }
 
+
 .home {
-    background-color: rgba(0, 0, 0, 0.5);
-    width: 35vw;
+    background-color: rgba(0, 0, 0, 0.7);
+    width: 45vw;
     text-align: center;
     align-items: center;
     color: white;
@@ -40,6 +47,8 @@
     font-size: 3rem;
     border: 0 solid transparent;
     border-radius: 10px;
+    padding: 1rem;
+    margin-bottom: 1rem;
 
 }
 
@@ -56,13 +65,14 @@
 header {
     display: flex;
     width: 100vw;
-    height: 10vh;
+    min-height: 8vh;
     background-color: rgba(0, 0, 0, 0.5);
     justify-content: center;
     align-items: center;
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.3);
     position: sticky;
     top: 0;
+    z-index: 10;
 
 }
 
@@ -112,10 +122,73 @@ button:active {
 body {
     background-image: url("./images/bread-background.jpg");
     background-size: cover;
-    background-position: center 10%;
+    background-position: center;
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-height: 100vh;
+}
 
+#content.home-active {
+    /* Take it out of the normal flow and position it on the page */
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    min-height: 100vh; /* Make it full viewport height */
 
+    /* Push this entire container behind the header */
+    z-index: 1;
+
+    /* Use flexbox to center the text content we'll add inside */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#content.home-active video {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+    /* Push the video behind the text content *within* the #content div */
+    z-index: -1;
+}
+
+#content.menu-active {
+
+}
+
+.menu-container {
+    display: flex;
+    flex-direction: column;
+    font-size: 3rem;
+    color: white;
+    gap: 3rem;
+    padding: 2rem;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.menu-item-container {
+    display: flex;
+    width: 45vw;
+    gap: 1rem;
+
+}
+.item-text-container {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+
+}
+
+#img-item-one, #img-item-two, #img-item-three {
+    width: 50%;
+    aspect-ratio: 1 / 1;
+    object-fit: cover;
+    border-radius: 10px;
 }
